--- a/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-valid-permits.phtml
@@ -2,12 +2,12 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-xl">
-            <?php echo $this->escapeHtml($data['validIrhpPermits']['results'][0]['irhpPermitApplication']['irhpApplication']['licence']['licNo']); ?>
+            <?php echo $this->escapeHtml($data['licence']['licNo']); ?>
         </span>
         <h1 class="govuk-heading-xl">
-            <?php echo $this->escapeHtml($this->translate($data['title'])); ?>
+            <?php echo $this->escapeHtml($data['title']); ?>
         </h1>
-        <?php echo $tables['overview-irhp-permits']; ?>
+        <?php echo $tables['valid-irhp-permits']; ?>
         <?php echo $this->permitsDashboardLink('permits.link.return.to.dashboard'); ?>
     </div>
 </div>
