--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -3,16 +3,24 @@
 ?>
 
 <?php echo $this->permitsBackLink('common.link.back.label', $data['backUri']); ?>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+        <?php if (!$data['application']['irhpPermitType']['isMultilateral'] || !$data['application']['irhpPermitType']['isBilateral']): ?>
         <span class="govuk-caption-xl">
-            <?php echo $this->escapeHtml($data['application']['applicationRef']); ?>
+            <?php
+                $ref = ($data['application']['irhpPermitType']['isMultilateral']) ? ' ' : $this->escapeHtml($data['application']['applicationRef']);
+                echo $ref;
+            ?>
         </span>
+        <?php endif; ?>
         <h1 class="govuk-heading-xl">
             <?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.permit.fee')); ?>
         </h1>
+
         <?php
-            echo $this->partial('partials/additional-guidance-component', ['additionalGuidance' => 'permits.page.irhp-fee.guidance']);
+            $guidance = ($data['application']['irhpPermitType']['isMultilateral']) ? '' : $this->partial('partials/additional-guidance-component', ['additionalGuidance' => 'permits.page.irhp-fee.guidance']);
+            echo $guidance;
             echo $this->partial('partials/summary-list', ['data' => $data[IrhpApplication::DATA_KEY]['mappedFeeData']]);
         ?>
     </div>
