--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -1,5 +1,7 @@
 <?php
     use Permits\Controller\Config\DataSource\IrhpApplication;
+
+    $feeBreakdownTable = $tables['irhp-fee-breakdown'];
 ?>
 
 <?php echo $this->permitsBackLink('common.link.back.label', $data['backUri']); ?>
@@ -12,9 +14,22 @@
         </h1>
 
         <?php
+
+            if ($feeBreakdownTable->hasRows()) {
+                ?><h3><?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.fee-summary')); ?></h3><?php
+            }
+
             echo $this->partial('partials/summary-list', ['data' => $data[IrhpApplication::DATA_KEY]['mappedFeeData']]);
+
+            if ($feeBreakdownTable->hasRows()) {
+                ?><h3><?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.fee-breakdown')); ?></h3><?php
+                echo($feeBreakdownTable);
+            }
+
+            echo($this->form($form));
+    
+            echo $this->permitsBackLink('permits.button.save-return-to-overview', $data['backUri']);
         ?>
     </div>
-    <?php echo $this->form($form); ?>
-    <?php echo $this->permitsBackLink('permits.button.save-return-to-overview', $data['backUri']); ?>
+
 </div>
