OLCS-22767 - application overview title wrong translation key bugfix

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -16,7 +16,7 @@
             <div class="page-header__wrapper">
                 <span class="page-header__subtitle"><?php echo $this->escapeHtml($application['applicationRef']); ?></span>
                 <h1 class="js-title">
-                    <?php echo $this->escapeHtml($this->translate('permits.irhp-application.overview.main')); ?>
+                    <?php echo $this->escapeHtml($this->translate('permits.application.overview.browser.title')); ?>
                 </h1>
             </div>
         </div>
