Added change for hint text for licence  OLCS-24649

--- a/app/selfserve/module/Olcs/view/partials/page-header-simple.phtml
+++ b/app/selfserve/module/Olcs/view/partials/page-header-simple.phtml
@@ -28,8 +28,13 @@
                 ? $this->pageTitle
                 : $this->escapeHtml($this->pageTitle)
             );
-        ?></h1>
-
+        ?>
+        <?php if ($this->hintText !== '') : ?>
+            <span class="govuk-hint">
+               <?php  echo($this->hintText); ?>
+            </span>
+         <?php endif; ?>
+        </h1>
         <?php if ($this->pageHeaderText !== '') : ?>
             <div class="page-header__text">
                 <p><?php
