--- a/app/selfserve/module/Olcs/view/overview-licence.phtml
+++ b/app/selfserve/module/Olcs/view/overview-licence.phtml
@@ -15,6 +15,7 @@
         [
             'pageTitle' => $this->translate('licence.overview.title'),
             'pageSubTitle' => $this->licenceId,
+            'hintText' => $this->translate('licence.overview.hintText'),
             'backUrl' => [
                 'url' => $this->url('dashboard'),
             ],
