--- a/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
@@ -17,7 +17,7 @@
             <?php echo $this->escapeHtml($this->translate($data['extraContent']['title'])); ?>
         </h2>
 
-        <?php echo $this->partial($data['extraContent']['list']); ?>
+        <?php echo $this->translate($data['extraContent']['list']); ?>
 
         <?php if (isset($data['warning'])) {
                  echo $this->partial('partials/warning-component', ['translationKey' => $data['warning']]);
