--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -12,10 +12,19 @@
         <h1 class="govuk-heading-xl">
             <?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.permit.fee')); ?>
         </h1>
+        <?php 
 
-        <?php
+            if (isset($data[IrhpApplication::DATA_KEY]['showWarningMessage'])) {
+                echo $this->partial(
+                    'partials/warning-component',
+                    [
+                        'translationKey' => 'permits.page.irhp-fee.message',
+                        'disableHtmlEscape' => true
+                    ]
+                );
+            }
 
-            if ($feeBreakdownTable->hasRows()) {
+            if ($feeBreakdownTable->hasRows() || isset($data[IrhpApplication::DATA_KEY]['showFeeSummaryTitle'])) {
                 ?><h3><?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.fee-summary')); ?></h3><?php
             }
 
