OLCS-23984: Add GDS skip to main link to base.phtml

--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -46,7 +46,7 @@
 
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
-    <a class="visually-hidden" id="skipToContent" href="#main"><?php echo $this->translate('skip-content'); ?></a>
+    <a href="#main" class="govuk-skip-link"><?php echo $this->translate('skip-content'); ?></a>
 
     <header role="banner" class="global-header">
       <div class="global-header__wrapper">
