--- a/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
@@ -6,13 +6,12 @@
             </h1>
             <div class="govuk-panel__body">
                 <?php echo $this->escapeHtml($this->translate('permits.page.confirmation.reference')); ?>
-                <br><strong><?php echo $this->escapeHtml($data['application']['applicationRef']); ?></strong>
-                <?php if (isset($data['receiptUrl']) && !empty($data['receiptUrl'])) { ?>
-                    <a href="<?php echo $data['receiptUrl']; ?>" class="govuk-!-font-size-19 govuk-!-margin-top-5 govuk-!-display-block" style="color: #FFFFFF;" target="_blank">View Receipt</a>
-                <?php } ?>
+                <br/><strong><?php echo $this->escapeHtml($data['application']['applicationRef']); ?></strong>
             </div>
         </div>
-
+        <?php if (!empty($data['receiptUrl'])) { ?>
+            <p><?php echo $this->translate('permits.page.confirmation.view.download'); ?> <a href="<?php echo $this->escapeHtmlAttr($data['receiptUrl']); ?>" class="govuk-link" target="_blank"><?php echo $this->translate('permits.page.confirmation.your.receipt'); ?></a>.</p><br />
+        <?php } ?>
         <h2 class="govuk-heading-m">
             <?php echo $this->escapeHtml($this->translate($data['extraContent']['title'])); ?>
         </h2>
