OLCS-25262 - Short Term ECMT- Selecting Browser back button while on the payment page gives out error

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -8,7 +8,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
+        <?php echo $this->flashMessengerAll(); ?>
         <h1 class="govuk-heading-xl">
             <?php echo $this->escapeHtml($this->translate('permits.page.irhp-fee.permit.fee')); ?>
         </h1>
