--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -12,7 +12,10 @@
         <div class="page-header">
             <p><a href="<?php echo $this->url('permits'); ?>" class="back-link"> <?php echo $this->escapeHtml($this->translate('common.link.back.label')); ?></a></p>
             <div class="page-header__wrapper">
-                <span class="page-header__subtitle"><?php echo $this->escapeHtml($application['applicationRef']); ?></span>
+                <span class="page-header__subtitle">
+                    <span class="visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.number'))); ?></span>
+                    <?php echo $this->escapeHtml($application['applicationRef']); ?>
+                </span>
                 <h1 class="js-title">
                     <?php echo $this->escapeHtml($this->translate('permits.application.overview.browser.title')); ?>
                 </h1>
