OLCS-26826 cookie preferences page

--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -82,7 +82,7 @@
 
                     $blurb = sprintf(
                         $this->translate('cookie-banner.blurb'),
-                        $this->url('cookies')
+                        $this->url('cookies/settings')
                     );
 
                     echo($blurb);
