OLCS-26859 - Update GA/GTM code to respect user cookie choice

--- a/app/selfserve/module/Olcs/view/partials/google-tag-manager.phtml
+++ b/app/selfserve/module/Olcs/view/partials/google-tag-manager.phtml
@@ -1,4 +1,9 @@
 <?php
+$cookieAnalytics = $this->placeholder('cookieAnalytics')->getValue();
+if (!$cookieAnalytics) {
+    return;
+}
+
 $cfg = $this->config();
 
 $googleTag = (isset($cfg['google-tag']) ? $cfg['google-tag'] : null);
