--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -256,6 +256,7 @@
       });
     </script>
 
+    <?php if($this->placeholder('cookieAnalytics')->getValue()):?>
     <script>
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -273,6 +274,7 @@
         ga('send', 'pageview');
 
     </script>
+    <?php endif;?>
 
   </body>
 </html>
