OLCS-26924 update cookies link to link to the cookie preferences page rather than cookie details page

--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -226,7 +226,7 @@
             <a href="<?php echo $this->url('terms-and-conditions');?>"><?php echo $this->translate('terms-and-conditions-title') ?></a>
           </li>
           <li class="global-footer__link">
-            <a href="<?php echo $this->url('cookies');?>"><?php echo $this->translate('cookies-title') ?></a>
+            <a href="<?php echo $this->url('cookies/settings');?>"><?php echo $this->translate('cookies-title') ?></a>
           </li>
           <li class="global-footer__link">
             <a href="<?php echo $this->url('privacy-notice');?>"><?php echo $this->translate('privacy-notice-title') ?></a>
