Feature/olcs 28860 cookie js

--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -275,6 +275,8 @@
 
     </script>
     <?php endif;?>
-
+    <script>
+        var cookieConfig = <?php echo $this->cookieManager();?>;
+    </script>
   </body>
 </html>
