--- a/app/selfserve/module/Olcs/view/pages/cookie/settings.phtml
+++ b/app/selfserve/module/Olcs/view/pages/cookie/settings.phtml
@@ -27,7 +27,7 @@ if ($success) {
 <h2 class="gem-c-heading gem-c-heading--padding"><?php echo $this->translate('cookie-settings-cookie-settings-heading'); ?></h2>
 <div class="cookie-settings__form-wrapper">
   <?php echo $this->translate('markup-cookie-settings-cookie-settings'); ?>
-  <form data-module="cookie-settings" method="POST">
+  <form data-module="cookie-settings" method="POST" id="olcs-cookie-settings" name="olcs-cookie-settings">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset" aria-describedby="hint-aed44408">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
