--- a/app/selfserve/module/Permits/view/permits/permits/single-question-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question-bilateral.phtml
@@ -1,5 +1,4 @@
-
-<?php echo $this->permitsBackLink('common.link.back.label', isset($data['backUri']) ? $data['backUri'] : '', $data['backUriParams'] ?? []); ?>
+<?php echo $this->permitsBackLink('common.link.back.label', isset($data['backUri']) ? $data['backUri'] : ''); ?>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -9,6 +8,8 @@
                 <?php echo $this->escapeHtml($data['application']['applicationRef']); ?>
             </span>
         <?php } ?>
+
+        <p><?php echo($data['application']['countryName']); ?></p>
 
         <?php echo $this->partial('partials/single-question-fieldset', ['data' => $data, 'form' => $form]); ?>
 
