OLCS-26993 ss bilateral country cabotage page

--- a/app/selfserve/module/Permits/view/permits/permits/single-question-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question-bilateral.phtml
@@ -1,4 +1,10 @@
-<?php echo $this->permitsBackLink('common.link.back.label', isset($data['backUri']) ? $data['backUri'] : ''); ?>
+<?php
+    echo $this->permitsBackLink(
+        'common.link.back.label',
+        isset($data['backUri']) ? $data['backUri'] : '',
+        isset($data['backUriParams']) ? $data['backUriParams'] : []
+    );
+?>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -9,7 +15,7 @@
             </span>
         <?php } ?>
 
-        <p><?php echo($data['application']['countryName']); ?></p>
+        <div class="govuk-caption-xl"><?php echo $this->escapeHtml($data['application']['countryName']); ?></div>
 
         <?php echo $this->partial('partials/single-question-fieldset', ['data' => $data, 'form' => $form]); ?>
 
