olcs-26983 essential information page gov.uk link opens in new window

--- a/app/selfserve/module/Permits/view/permits/permits/essential-information.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/essential-information.phtml
@@ -9,7 +9,7 @@
             </legend>
             <?php echo $this->translate('markup-irhp-country-' . $countryCode); ?>
             <?php echo $this->partial('partials/irhp-bilateral-fee-table'); ?>
-            <p><?php echo $this->escapeHtml($this->translate('permits.further.guidance')); ?> <a href="<?php echo $this->translate('permits.link.ecmt.guidance'); ?>">GOV.UK.</a></p>
+            <p><?php echo $this->escapeHtml($this->translate('permits.further.guidance')); ?> <a href="<?php echo $this->translate('permits.link.ecmt.guidance'); ?>" target="_blank">GOV.UK.</a></p>
             <div class="form-steps">
                 <p>
                     <a class="button govuk-button" role="button" href="<?php echo $this->url($data['continueUri'], [], [], true); ?>">
