--- a/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/confirmation.phtml
@@ -23,6 +23,7 @@
              }
          ?>
 
+        <?php echo $this->translate('markup-feedback-page-link'); ?>
         <a href="<?php echo $this->url('permits') ?>" role="button" draggable="false" class="govuk-button">
             <?php echo $this->escapeHtml($this->translate('permits.page.confirmation.finish')); ?>
         </a>
