--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
@@ -127,6 +127,13 @@
         </li>
       </ol>
 
+    <?php
+
+    if ($data['displaySubmitApplicationButton']) {
+        echo $this->form($form);
+    }
+
+    ?>
 
     </div>
     <!-- SIDE PANEL -->
