--- a/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
+++ b/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
@@ -19,6 +19,10 @@
 
 <div class="row">
   <div class="two-thirds">
+      <div class="guidance">
+          <p><?php echo $this->translate('my-details.name-change.locked.guidance.message'); ?></p>
+      </div>
+
     <?php echo $this->flashMessengerAll(); ?>
     <?php
       echo $this->formErrors($this->form);
