--- a/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
+++ b/app/selfserve/module/Olcs/view/pages/my-details-page.phtml
@@ -11,18 +11,16 @@
     );
 ?>
 
-<p id="top" class="actions-container">
-    <a class="action--tertiary" href="<?php echo $this->url('change-password'); ?>">
-        <?php echo $this->translate('my-details.change-password.label');?>
-    </a>
-</p>
-
 <div class="row">
   <div class="two-thirds">
       <div class="guidance">
-          <p><?php echo $this->translate('my-details.name-change.locked.guidance.message'); ?></p>
+          <p><?php echo $this->translate('name-change.locked.guidance.message'); ?></p>
       </div>
-
+      <p id="top" class="actions-container">
+          <a class="action--tertiary" href="<?php echo $this->url('change-password'); ?>">
+              <?php echo $this->translate('my-details.change-password.label');?>
+          </a>
+      </p>
     <?php echo $this->flashMessengerAll(); ?>
     <?php
       echo $this->formErrors($this->form);
