--- a/app/selfserve/module/Olcs/view/user-form.phtml
+++ b/app/selfserve/module/Olcs/view/user-form.phtml
@@ -12,6 +12,17 @@
 <div class="row">
   <div class="two-thirds">
     <?php
+        $guidanceMessage = $this->placeholder('guidance');
+        if (!empty($guidanceMessage)) {
+            foreach ($guidanceMessage as $message):
+                ?>
+                <div class="guidance">
+                    <p><?php echo $this->translate($message); ?></p>
+                </div>
+            <?php
+            endforeach;
+        }
+
       echo $this->flashMessengerAll();
       echo $this->formErrors($this->form);
       echo $this->form($this->form);
