--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
@@ -57,18 +57,19 @@
             <?php
     
             foreach ($questionAnswer['countries'] as $country) {
-
                 $countryCode = $country['countryCode'];
                 $countryName = $country['countryName'];
                 $status = $country['status'];
                 $statusCaption = Section::COMPLETION_STATUS[$status];
                 $statusColour = Section::COMPLETION_STATUS_COLOUR[$status];
-
+                $countryUrl = ($status === Section::SECTION_COMPLETION_COMPLETED)
+                    ? $this->url(Section::ROUTE_IPA_CHECK_ANSWERS, ['irhpPermitApplication' => $country['irhpPermitApplication']], ['query' => ['fromOverview' => 1]], true)
+                    : $this->url(Section::ROUTE_ESSENTIAL_INFORMATION, ['country' => $countryCode], [], true);
             ?>
 
             <li class="app-task-list__item">
               <span class="app-task-list__task-name">
-                <a href="<?php echo $this->url(Section::ROUTE_ESSENTIAL_INFORMATION, ['country' => $countryCode], [], true); ?>">
+                <a href="<?php echo $countryUrl; ?>">
                   <?php echo($country['countryName']); ?>
                 </a>
               </span>
