--- a/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
@@ -1,5 +1,11 @@
-
-<?php echo $this->permitsBackLink('common.link.back.label', isset($data['backUri']) ? $data['backUri'] : '', $data['backUriParams'] ?? []); ?>
+<?php
+    echo $this->permitsBackLink(
+        'common.link.back.label',
+        isset($data['backUri']) ? $data['backUri'] : '',
+        isset($data['backUriParams']) ? $data['backUriParams'] : [],
+        isset($data['backUriOptions']) ? $data['backUriOptions'] : []
+    ); 
+?>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
