OLCS-27306 refactor save and return overview link to return to overview on permit fee page on all permit types

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-fee.phtml
@@ -43,7 +43,7 @@
     
         ?>
         <a class="govuk-link govuk-body" href="<?php echo($this->url($data['backUri'], [], [], true)); ?>">
-            <?php echo $this->escapeHtml($this->translate('permits.button.save-return-to-overview')); ?>
+            <?php echo $this->escapeHtml($this->translate('permits.button.return-to-overview')); ?>
         </a>
 
     </div>
