OLCS-27025 - Update to IRHP permits page

--- a/app/internal/module/Olcs/view/sections/irhp-permit/partials/left.phtml
+++ b/app/internal/module/Olcs/view/sections/irhp-permit/partials/left.phtml
@@ -1,10 +1,7 @@
-<h4 class="title"><?php echo $this->translate('application-details-nav'); ?></h4>
-
-<div class="filters">
-    <?php
-    $tableFilters = $this->placeholder('tableFilters')->getValue();
-    if($tableFilters instanceof \Zend\Form\Form) {
-        echo $this->form($tableFilters);
-    }
-    ?>
-</div>
+<h4 class="title"><?php echo $this->translate('IRHP Permits'); ?></h4>
+<?php
+$activePage = $this->navigation('navigation')->findOneByActive(true);
+if (!$activePage) {
+    throw new \RuntimeException('Cannot find active page to be able to display left menu');
+}
+echo $this->navigation($activePage->getParent())->menu()->setPartial('partials/vertical-navigation');
