--- a/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
+++ b/app/selfserve/module/Olcs/view/partials/tabs-nav.phtml
@@ -2,7 +2,7 @@
   <div class="tab-list" role="tablist">
   <?php foreach ($this->container as $page): ?>
     <?php if ($page->isVisible(true) && $this->navigation()->accept($page, false)): ?>
-        <a href="<?php echo $page->getHref(); ?>" class="tab-list__item<?php if ($page->isActive(true)) { ?> active<?php } ?>" role="tab">
+        <a href="<?php echo $page->getHref(); ?>" class="tab-list__item<?php if ($page->isActive(true)) { ?> active<?php } ?>" role="tab" <?php if ($page->isActive(true)) { ?>aria-selected="true"<?php } else {?> aria-selected="false" <?php } ?>>
         <?php echo $this->translate($page->getLabel()); ?>
         <?php echo $page->get('count') ? '('.$page->get('count').')' : '';?>
         </a>
