--- a/app/selfserve/module/Olcs/view/layouts/base.phtml
+++ b/app/selfserve/module/Olcs/view/layouts/base.phtml
@@ -138,7 +138,7 @@
       <div class="global-header__wrapper">
 
         <a href="/" title="Go to dashboard" class="global-header__logo">
-          <img aria-label="GOV-dot-U.K logo" src="<?php echo $this->assetPath('/images/bitmap/gov.uk_logotype_crown.png') ?>" alt="GOV.UK logo">
+          <img src="<?php echo $this->assetPath('/images/bitmap/gov.uk_logotype_crown.png') ?>" alt="GOV.UK logo">
           <span aria-hidden="true">GOV.UK</span>
         </a>
 
