--- a/app/selfserve/module/Permits/view/partials/irhp-bilateral-fee-table.phtml
+++ b/app/selfserve/module/Permits/view/partials/irhp-bilateral-fee-table.phtml
@@ -1,30 +1,32 @@
-<p><?php echo $this->translate('permits.page.bilateral.countries.fee.table.heading'); ?></p>
+<h2 class="govuk-heading-s"><?php echo $this->translate('permits.page.bilateral.countries.fee.table.heading'); ?></h2>
+
+<ul class="govuk-list govuk-list--bullet">
+    <li><?php echo $this->translate('permits.page.bilateral.countries.fee.table.bullet1'); ?></li>
+    <li><?php echo $this->translate('permits.page.bilateral.countries.fee.table.bullet2'); ?></li>
+    <li><?php echo $this->translate('permits.page.bilateral.countries.fee.table.bullet3'); ?></li>
+</ul>
 
 <table class="govuk-table">
     <thead class="govuk-table__head">
     <tr class="govuk-table__row">
         <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.permit.type')); ?></th>
-        <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.application.fee.per.permit')); ?></th>
-        <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.grant.fee.per.permit')); ?></th>
+        <th class="govuk-table__header" scope="col"><?php echo $this->escapeHtml($this->translate('permits.page.fee.total.fee.per.permit')); ?></th>
     </tr>
     </thead>
     <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.multi.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['multi']['application']); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['multi']['grant']); ?></td>
+        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['multi']['total']); ?></td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.single.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['single']['application']); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['single']['grant']); ?></td>
+        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['single']['total']); ?></td>
     </tr>
     <tr class="govuk-table__row">
         <td class="govuk-table__cell"><?php echo $this->escapeHtml($this->translate('permits.irhp.bilateral.cabotage.journey')); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['cabotage']['application']); ?></td>
-        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['cabotage']['grant']); ?></td>
+        <td class="govuk-table__cell"><?php echo $this->currencyFormatter($this->data['countryFee']['cabotage']['total']); ?></td>
     </tr>
     </tbody>
 </table>
 
-<p><?php echo $this->translate('permits.page.bilateral.countries.essential.separate.cabotage'); ?></p>
+<p><?php echo $this->translate('permits.page.bilateral.countries.fee.table.footer'); ?></p>
