OLCS-27310 - SS - Bilateral - Application overview - mark "Submit and pay" section as COMPLETED

--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview-bilateral.phtml
@@ -113,7 +113,7 @@
                 $status = $questionAnswer['reviewAndSubmit']['submitAndPay'];
                 $statusCaption = Section::COMPLETION_STATUS[$status];
                 $statusColour = Section::COMPLETION_STATUS_COLOUR[$status];
-                $linkActive = $status != Section::SECTION_COMPLETION_CANNOT_START;
+                $linkActive = $status == Section::SECTION_COMPLETION_NOT_STARTED;
 
               ?>
               <span class="app-task-list__task-name">
