OLCS-27300 - Accessibility : Bilateral permits - Incorrect HTML titles - various pages

--- a/app/selfserve/module/Olcs/view/dashboard-tm.phtml
+++ b/app/selfserve/module/Olcs/view/dashboard-tm.phtml
@@ -2,7 +2,7 @@
 echo $this->partial(
     'partials/page-header-simple',
     [
-        'pageTitle' => $this->translate('dashboard.title'),
+        'pageTitle' => $this->translate('dashboard.tm.title'),
     ]
 );
 ?>
