--- a/app/selfserve/module/Olcs/view/pages/fees/home.phtml
+++ b/app/selfserve/module/Olcs/view/pages/fees/home.phtml
@@ -2,7 +2,7 @@
 echo $this->render(
     '/partials/page-header-simple.phtml',
     [
-        'pageTitle' => $this->translate('dashboard.title'),
+        'pageTitle' => $this->translate('dashboard.fees.title'),
     ]
 );
 ?>
