--- a/app/selfserve/module/Permits/view/permits/permits/index.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/index.phtml
@@ -6,7 +6,7 @@ $translator = $this->getHelperPluginManager()->getServiceLocator()->get('Helper\
 ?>
 
 <div class="page-header__wrapper">
-    <h1 class="js-title"><?php echo $this->escapeHtml($this->translate('dashboard.title')); ?></h1>
+    <h1 class="js-title"><?php echo $this->escapeHtml($this->translate('dashboard.permits.title')); ?></h1>
 </div>
 <div class="row">
     <div class="dashboard two-thirds">
