--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -10,7 +10,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <div class="page-header">
-            <p><a href="<?php echo $this->url('permits'); ?>" class="back-link"> <?php echo $this->escapeHtml($this->translate('common.link.back.label')); ?></a></p>
+            <p><a href="<?php echo $this->url('permits'); ?>" class="govuk-back-link"> <?php echo $this->escapeHtml($this->translate('common.link.back.label')); ?></a></p>
             <div class="page-header__wrapper">
                 <span class="govuk-caption-xl">
                     <span class="visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.number'))); ?></span>
@@ -66,7 +66,7 @@
                 if ($application['canBeCancelled']) {
                     ?>
                     <ul class="info-box__links">
-                        <li>
+                        <li class="govuk-body">
                             <a href="<?php echo $this->url(Section::ROUTE_CANCEL_APPLICATION, [], [], true); ?>">
                                 <?php echo $this->translate('permits.irhp-application.cancel.question'); ?>
                             </a>
