--- a/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-application-overview.phtml
@@ -13,7 +13,7 @@
             <p><a href="<?php echo $this->url('permits'); ?>" class="govuk-back-link"> <?php echo $this->escapeHtml($this->translate('common.link.back.label')); ?></a></p>
             <div class="page-header__wrapper">
                 <span class="govuk-caption-xl">
-                    <span class="visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.number'))); ?></span>
+                    <span class="visually-hidden"><?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?></span>
                     <?php echo $this->escapeHtml($application['applicationRef']); ?>
                 </span>
                 <h1 class="js-title">
