--- a/app/selfserve/module/Olcs/view/partials/single-question-fieldset.phtml
+++ b/app/selfserve/module/Olcs/view/partials/single-question-fieldset.phtml
@@ -4,6 +4,10 @@ if (!isset($data['headingType'])) {
     $data['headingType'] = 'standard';
 }
 
+if (isset($data['bulletList']) && !isset($data['bulletList']['type'])) {
+    $data['bulletList']['type'] = 'standard';
+}
+
 ?>
 <fieldset class="govuk-fieldset">
     <?php echo $this->render('partials/single-question-fieldset-h1-' . $data['headingType']); ?>
@@ -26,10 +30,7 @@ if (!isset($data['headingType'])) {
          echo $this->partial('partials/hint', ['hint' => $data['hint']]);
      }
      if (isset($data['bulletList'])) { ?>
-        <p class="govuk-body-l">
-            <?php echo $this->escapeHtml($this->translate($data['bulletList']['title'])); ?>:
-        </p>
-        <?php echo $this->translate($data['bulletList']['list']); ?>
+        <?php echo $this->render('partials/single-question-fieldset-bullet-list-' . $data['bulletList']['type']); ?>
     <?php } ?>
     <div class="govuk-form-group">
         <?php echo $this->form($form); ?>
