--- a/app/selfserve/module/Permits/view/permits/permits/irhp-unpaid-permits.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/irhp-unpaid-permits.phtml
@@ -6,6 +6,9 @@ use Permits\View\Helper\IrhpApplicationSection;
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <span class="govuk-caption-xl">
+            <span class="visually-hidden">
+                <?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?>
+            </span>
             <?php echo $this->escapeHtml($data[IrhpAppDataSource::DATA_KEY]['applicationRef']); ?>
         </span>
         <h1 class="govuk-heading-xl">
