--- a/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
+++ b/app/selfserve/module/Permits/view/permits/permits/single-question.phtml
@@ -12,6 +12,9 @@
         <?php echo $this->formErrors($form); ?>
         <?php if (isset($data['application']['applicationRef'])) { ?>
             <span class="govuk-caption-xl">
+                <span class="visually-hidden">
+                    <?php echo($this->escapeHtml($this->translate('permits.application.overview.application.reference'))); ?>
+                </span>
                 <?php echo $this->escapeHtml($data['application']['applicationRef']); ?>
             </span>
         <?php } ?>
